<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_chat_delete">Delete conversation</string>
    <string name="action_contact_add_bar">Add %1$s to your contacts</string>
    <string name="action_contact_add_button">Add a friend</string>
    <string name="action_contact_add_menu">Add contact</string>
    <string name="action_contact_block">Block</string>
    <string name="action_contact_block_toast">User has been blocked</string>
    <string name="action_contact_call">Call contact</string>
    <string name="action_contact_unblock">Unblock</string>
    <string name="action_contact_unblock_toast">User has been unblocked</string>
    <string name="action_contact_view">View in address book</string>
    <string name="action_location_view">Open in map</string>
    <string name="action_refresh_list">Refresh contacts</string>
    <string name="action_sign_in">Complete setup</string>
    <string name="action_troubleshoot">Tips</string>
    <string name="action_troubleshoot_title">A few helpful tips</string>
    <string name="action_undo">Undo</string>
    <string name="activity_block_title">Blocked users</string>
    <string name="activity_not_found">No activity was found to perform request</string>
    <string name="almost_done">Almost done!</string>
    <string name="android_text_copy">Text copied</string>
    <string name="app_name">Bridgefy</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="blocked_contact_bar">This user is blocked</string>
    <string name="bluetooth_disabled_dialog">Bridgefy uses Bluetooth to find nearby friends.</string>
    <string name="bluetooth_disabled_toast">Bluetooth antenna is turned off</string>
    <string name="bluetooth_enable_prompt">Enable Bluetooth?</string>
    <string name="bluetooth_permission">Bridgefy requires BLUETOOTH and BLUETOOTH_ADMIN permissions to operate properly</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bridgefy_been_signed_out">You have been signed out of Bridgefy</string>
    <string name="bridgefy_loading_text">Loading…</string>
    <string name="bridgefy_registration_fail">A fatal error has occurred, please contact support (code=%1$d)</string>
    <string name="bridgefy_sign_out">Bridgefy sign out</string>
    <string name="bridgefy_sign_out_body">You have logged in to Bridgefy from another device. We only support one device per user for the time being!</string>
    <string name="bridgefy_signed_out">You have signed out of Bridgefy</string>
    <string name="broadcast_loader_text">Finding people near you …</string>
    <string name="broadcast_loader_text_error">Broadcast mode is off</string>
    <string name="broadcast_loader_text_retry">Start Broadcast mode</string>
    <string name="broadcast_msgs_level_all">all</string>
    <string name="broadcast_msgs_level_summary">Saving %1$s messages</string>
    <string name="broadcast_msgs_level_title">Broadcast messages to save</string>
    <string name="broadcast_onboarding_body">Now you can talk with Bridgefy users around you!\10\10You will only receive messages while you\'re inside the room, and they will be deleted when you leave.\10\10Messages sent in the Broadcast room are public and not encrypted.</string>
    <string name="broadcast_onboarding_title">Welcome to the Broadcast room</string>
    <string name="broadcast_toast">You can now start the Broadcast mode</string>
    <string name="btn_send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="channel_description">Bridgefy Notifications</string>
    <string name="channel_name">Bridgefy</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_decrypt_failed">Could not decrypt message</string>
    <string name="chat_message_failed">Retry</string>
    <string name="chip_text">Chip text</string>
    <string name="com.crashlytics.android.build_id">74eb185e-606a-4497-88c3-2ffe3c184f15</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_sen_data">This image may take too long to send offline. Do you want to proceed?</string>
    <string name="contact_list_update">Refresh is already in progress</string>
    <string name="contact_list_update_error">An error occurred when updating your contact list. Make sure you\'re online and try again in a few minutes.</string>
    <string name="contact_list_updated">Your contact list has been updated!</string>
    <string name="contacts_permission_denied_snack">Address book access restricted</string>
    <string name="empty_chats">There are no active chats \10 Press the red button to start a conversation</string>
    <string name="fui_continue_phone_login">Continue</string>
    <string name="fui_enter_confirmation_code">Enter the 6-digit code we sent to</string>
    <string name="fui_resend_code">Resend Code</string>
    <string name="help_contact">Still not working? Drop us a line! We\'ll be glad to help you sort it out.</string>
    <string name="help_content">• Make sure you have your friend\'s phone number in your address book.\10\10 • Double check that your friend has successfully signed up on Bridgefy.\10\10 • Make sure your friend\'s name matches his record in your address book so it shows up on Bridgefy as expected.</string>
    <string name="help_intro">Bridgefy shows all contacts from your address book who also use Bridgefy. \10If you can\'t see a friend, check the following:</string>
    <string name="invite_your_friends_text">None of your address book contacts \10use Bridgefy! :(\10\10But don\'t worry, you can always \10invite them to join!</string>
    <string name="notification_sound">Notification sound</string>
    <string name="settings">Settings</string>
    <string name="settings_analytics">Statistics</string>
    <string name="settings_analytics_summary">Gather anonymous usage statistics</string>
    <string name="settings_category_messages">MESSAGES</string>
    <string name="settings_category_other">OTHER SETTINGS</string>
    <string name="settings_messages_notifications_title">Enable message notifications</string>
    <string name="settings_read_message_title">Read receipts</string>
    <string name="share">Share Bridgefy</string>
    <string name="spread_the_love">Spread the love</string>
    <string name="tooltip_nearby">Talk with nearby users immediately</string>
    <string name="tooltip_new_contact">Tap this icon to add a new contact</string>
    <string name="tooltip_new_conversation">Press here to start a new chat</string>
    <string name="tooltip_sdk">How does Bridgefy work?</string>
    <string name="txt_hint">Write your message</string>
    <string name="unverified_contact_bar">This user is unverified</string>
</resources>