<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar android:id="@+id/help_toolbar" style="@style/BridgefyActionBar"/>
    <TextView android:textSize="18sp" android:id="@+id/help_intro" android:padding="15dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_intro"/>
    <TextView android:id="@+id/help_content" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_content"/>
    <TextView android:textSize="18sp" android:textStyle="bold" android:id="@+id/help_contact" android:padding="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_contact"/>
</LinearLayout>
