<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="top" android:layout_gravity="top" android:orientation="vertical" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:foreground="?android:attr/windowContentOverlay">
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/chat_entries_recycler_view" android:layout_width="match_parent" android:layout_height="match_parent" android:drawSelectorOnTop="true"/>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/emptyContainerView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp">
        <ImageView android:layout_gravity="center" android:layout_width="154dp" android:layout_height="154dp" android:layout_marginBottom="8dp" android:src="@drawable/ic_logo_gray"/>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/emptyChatsView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/gray_light" android:gravity="center" android:layout_gravity="center" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty_chats"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@+id/emptyContactsView" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp">
            <TextView android:textColor="@color/gray_light" android:gravity="center" android:id="@+id/txtInviteContent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/invite_your_friends_text"/>
            <Button android:textSize="22sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/btnShareBridgefy" android:background="@drawable/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/spread_the_love" android:textAllCaps="false"/>
            <Button android:textSize="22sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/btnAddContact" android:background="@drawable/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/action_contact_add_button" android:textAllCaps="false"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
