<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FirebaseUI.WrapperStyle">
        <TextView android:id="@+id/dgts_titleText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/fui_enter_confirmation_code" style="@style/FirebaseUI.Text.T08"/>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/fui_linkColor" android:id="@+id/edit_phone_number" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/dgts_titleText" style="@style/FirebaseUI.Text.T08"/>
        <com.firebase.p119ui.auth.p124ui.phone.SpacedEditText android:textSize="32sp" android:typeface="monospace" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/confirmation_code" android:background="@color/fui_transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:cursorVisible="false" android:ems="10" android:layout_below="@+id/edit_phone_number" android:layout_centerHorizontal="true" android:inputType="number" android:imeOptions="actionDone" android:fontFamily="monospace" app:spacingProportion="1.1"/>
        <Button android:id="@+id/submit_confirmation_code" android:text="@string/fui_continue_phone_login" android:layout_below="@+id/confirmation_code" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" style="@style/FirebaseUI.VerifyPhoneButton"/>
        <LinearLayout android:orientation="vertical" android:id="@+id/resend_code_layout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/submit_confirmation_code">
            <TextView android:enabled="false" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="?android:attr/textColorSecondary" android:gravity="center" android:id="@+id/ticker" android:paddingTop="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/FirebaseUI.Text.T08"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/fui_linkColor" android:gravity="center" android:id="@+id/resend_code" android:paddingTop="16dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/fui_resend_code" style="@style/FirebaseUI.Text.T08"/>
        </LinearLayout>
        <TextView android:id="@+id/create_account_tos" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fui_field_padding_vert" android:layout_below="@+id/resend_code_layout" android:textIsSelectable="false" style="@style/FirebaseUI.Text.BodyText"/>
    </RelativeLayout>
</ScrollView>
