<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent" android:foreground="?android:attr/windowContentOverlay">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="14sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@+id/addContactBar" android:background="@color/green" android:paddingLeft="20dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/info_bar" android:text="@string/action_contact_add_bar"/>
        <TextView android:textSize="14sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@+id/blockedContactBar" android:background="@color/bridgefy_primary" android:paddingLeft="20dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/info_bar" android:text="@string/blocked_contact_bar"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/unverifiedContactBar" android:background="@color/gray_light_opaque" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14sp" android:textColor="@color/gray_dark" android:gravity="center" android:paddingLeft="20dp" android:layout_width="wrap_content" android:layout_height="@dimen/info_bar" android:layout_marginRight="10dp" android:text="@string/unverified_contact_bar"/>
            <ImageButton android:layout_width="35dp" android:layout_height="35dp" app:ico_color="@color/white" app:ico_icon="gmd_info_outline" app:ico_size="20dp"/>
        </LinearLayout>
        <RelativeLayout android:orientation="vertical" android:id="@+id/listContainer" android:background="@drawable/chat_background" android:layout_width="match_parent" android:layout_height="match_parent" android:baselineAligned="false">
            <androidx.recyclerview.widget.RecyclerView android:id="@+id/chat_fragment_recycler_view" android:paddingBottom="20dp" android:layout_width="match_parent" android:layout_height="match_parent" android:drawSelectorOnTop="false" android:transcriptMode="alwaysScroll" android:divider="@null" android:layout_above="@+id/chatLineHolder"/>
            <RelativeLayout android:orientation="horizontal" android:id="@+id/chatLineHolder" android:background="@drawable/shadow" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:layout_alignParentStart="true">
                <CheckBox android:layout_gravity="bottom" android:id="@+id/btnEmojicon" android:background="@drawable/ic_insert_emoticon_grey600_24dp" android:visibility="gone" android:layout_width="24dp" android:layout_height="24dp" android:layout_marginLeft="9dp" android:layout_marginRight="9dp" android:layout_marginBottom="6dp" android:button="@null" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
                <EditText android:textColor="@color/black" android:layout_gravity="bottom" android:id="@+id/txtChatLine" android:background="@android:color/transparent" android:paddingTop="10dp" android:paddingBottom="10dp" android:focusableInTouchMode="true" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="9dp" android:layout_marginRight="66dp" android:layout_marginBottom="2dp" android:hint="@string/txt_hint" android:maxLength="@integer/max_text_input" android:layout_toRightOf="@+id/btnEmojicon" android:inputType="none|text|textCapSentences|textMultiLine|textShortMessage" android:layout_marginEnd="66dp" android:layout_toEndOf="@+id/btnEmojicon"/>
            </RelativeLayout>
            <com.github.clans.fab.FloatingActionButton android:id="@+id/fabText" android:padding="16dp" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:layout_marginBottom="11dp" android:src="@drawable/ic_action_send" android:layout_alignRight="@+id/chatLineHolder" android:layout_alignBottom="@+id/chatLineHolder"/>
            <com.github.clans.fab.FloatingActionMenu android:id="@+id/fabAttachments" android:paddingRight="10dp" android:paddingBottom="11dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignRight="@+id/chatLineHolder" android:layout_alignBottom="@+id/chatLineHolder">
                <com.github.clans.fab.FloatingActionButton android:id="@+id/fab_action_location" android:layout_width="@dimen/fab_circle_size" android:layout_height="@dimen/fab_circle_size" android:src="@drawable/ic_action_location" style="@style/FabButtonsStyle"/>
                <com.github.clans.fab.FloatingActionButton android:id="@+id/fab_action_image" android:layout_width="@dimen/fab_circle_size" android:layout_height="@dimen/fab_circle_size" android:src="@drawable/ic_action_image" style="@style/FabButtonsStyle"/>
                <com.github.clans.fab.FloatingActionButton android:id="@+id/fab_action_photo" android:layout_width="@dimen/fab_circle_size" android:layout_height="@dimen/fab_circle_size" android:src="@drawable/ic_action_camera" style="@style/FabButtonsStyle"/>
            </com.github.clans.fab.FloatingActionMenu>
            <FrameLayout android:id="@+id/emojicons" android:tag="emojiconsFragment" android:background="@color/white" android:visibility="gone" android:layout_width="match_parent" android:layout_height="200dp" android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
